[metadata]
name = bot-community
version = 0.0.1
author = ITEAMS
author_email = contact@iteams.mg
description = Module python permettant de faire différent recherche sur le Web.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iteams
project_urls =
    Bug Tracker = https://github.com/iteams/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

packages = find:
python_requires = >=3.6

