[metadata]
name = WebSearch
version = 1.2.0-dev
author = iTeam-$
author_email = contact@iteam-s.xyz
description = Python module allowing you to do various searches for links on the Web.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iTeam-S/WebSearch
project_urls =
    Bug Tracker = https://github.com/iTeam-S/WebSearch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

packages = find:
python_requires = >=3.6

